--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
 #root, html, body {
     height: 100vh;
+    margin: 0;
 }
 
 body {
-    margin: 0;
-    background-color: rgb(42, 44, 94);
+    background-image: url('images/background.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    box-sizing: border-box;
 }
 
 * {
